[package]
name = "rust-string-pen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
lambda_http = "0.5.2"
http = "0.2.7"
log = "0.4.16"
serde_json = "1.0.81"
serde = "1.0.137"
simple_logger = "2.1.0"
tokio = {version = "1", features = ["full"]}

[[bin]]
name = "bootstrap"
path = "src/main.rs"